--- a/djangoportion/housing/priceprediction/templates/priceprediction/register.html
+++ b/djangoportion/housing/priceprediction/templates/priceprediction/register.html
@@ -49,7 +49,9 @@
             <button type="submit">submit</button>
           </form>
           <a href="{% url 'login' %}">click here to go login page</a>
-          <p>Note -> If using phone then please view in desktop mode</p>
+          <p>Note-1 ->If your password created successfully you will directly redirected to login page </p>
+          <p>Note-2 -> If using phone then please view in desktop mode</p>
+
     </div>
 </body>
 </html>
